--- a/GHM/assets/css_add/histoire.css
+++ b/GHM/assets/css_add/histoire.css
@@ -198,6 +198,10 @@ section:first-of-type:not(nav) {
 section:nth-of-type(even):not(.contenu7) {
     background-color: #f8f9fa;
 }
+.col-md-6 .image3{
+    width: 100%;
+    height: 70vh;
+}
 
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
