--- a/assets/css_add/index.css
+++ b/assets/css_add/index.css
@@ -125,7 +125,7 @@ a {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    background: #f7c600;
+    background: rgb(109, 179, 4);
     margin: auto;
     position: relative;
     top: -30px;
@@ -133,8 +133,11 @@ a {
 }
 
 .valeur strong:hover {
-    background: #6a9e3f;
+    background: #aaff01;
     color: white;
+    transform: translateY(-5px) scale(1.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+
 }
 
 /* ===== CONTENU 7 ===== */
@@ -145,9 +148,11 @@ a {
 
 /* ===== CONTENU 8 ===== */
 .contenu8 {
-    background-image: url("../images/arriere.png");
-    /* background-repeat: no-repeat; */
-    /* background-size: cover; */
+    background-image: url("../images/chat.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+    background-color: rgb(223, 220, 220);
 }
 
 .contenu8 h1 {
@@ -155,13 +160,26 @@ a {
     font-weight: bold;
 }
 
+.contenu8 .row {
+    opacity: 0;
+    transform: translateX(-50px);
+    transition: transform 0.6s ease, opacity 0.6s ease;
+}
+
+.contenu8 .row.visible {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+
 #chiffre {
     width: 200px;
     height: 100px;
     font-size: 2.5rem;
     font-weight: 700;
     color: #fff;
-    background: linear-gradient(135deg, #83b821, #a4d53c);
+    background: rgb(109, 179, 4);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -174,6 +192,7 @@ a {
 #chiffre:hover {
     transform: translateY(-5px) scale(1.1);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+    background: #aaff01;
 }
 
 #txt {
